[project]
name = "arbiter"
version = "0.1.0"
description = "Arbiter is a Python library for evaluating and comparing generative models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "numpy==2.2.6",
    "numba==0.61.2",
    "llvmlite==0.44.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "piq>=0.8.0",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.5.0",
    "torchvision>=0.23.0",
    "transformers>=4.32",
    "facexlib@git+https://github.com/xinntao/facexlib.git",
    "pyiqa@git+https://github.com/chaofengc/IQA-PyTorch.git",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "pyupgrade>=3.20.0",
    "unimport>=1.2.1",
]
